Risolto: Errori relativi agli elementi dell'interfaccia Customer, conto che non si aggiornava.